<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/card_background"
    android:layout_marginBottom="12dp"
    android:elevation="4dp">

    <TextView
        android:id="@+id/txtTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tarjeta"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_monto"
        android:textSize="14sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtMetodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_metodo"
        android:textSize="14sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fecha"
        android:textSize="13sp"
        android:textColor="@color/black" />
</LinearLayout>
