<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_back_white"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvChooseLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_idioma"
        android:textSize="18sp"
        android:textStyle="bold"
        style="@style/TEXT"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbEspanol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEspanol"
            android:textSize="16sp"
            style="@style/TEXT"
            android:buttonTint="#3F51B5"/>

        <RadioButton
            android:id="@+id/rbIngles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtIngles"
            android:textSize="16sp"
            style="@style/TEXT"
            android:buttonTint="#3F51B5"/>

    </RadioGroup>

</LinearLayout>
