<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_above="@+id/mainFabBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainFabBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_add_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editFabBtn"
        android:layout_above="@id/mainFabBtn"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_edit_description"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteFabBtn"
        android:layout_above="@id/editFabBtn"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_delete_description" />
</RelativeLayout>
